# hands-on-llm-training

./: README.md  pyproject.toml
datas/: 수능 과학.csv  수능 사회.csv  수능 수학.csv  수능 영어.csv  수능 외국어.csv  수능 직업.csv  수능 한국사.csv
simple_rl/: preprocessing.ipynb  training.ipynb  training.py
