[project]
name = "hands-on-llm-training"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.3.0",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "trl>=0.24.0",
]
